[package]
name = "cloud-vm-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.0"
tower-http = { version = "0.5.0", features = ["trace"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
rand = "0.8.5"